# C_Point

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: sum.h
src/: CMakeLists.txt  sum.cpp
